Fix header collapsability

--- a/src/static/css/Header.css
+++ b/src/static/css/Header.css
@@ -72,7 +72,7 @@
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .navbar-collapse {
     position: absolute;
-    top: 100%;
+    top: 70%;
     left: 0;
     width: 100%;
     background-color: #fff;
@@ -86,7 +86,7 @@
 @media (max-width: 767px) {
   .navbar-collapse {
     position: absolute;
-    top: 100%;
+    top: 70%;
     left: 0;
     width: 100%;
     background-color: #fff;
@@ -148,7 +148,7 @@
 }
 .navbar-nav .nav-item.active > a,
 .navbar-nav .nav-item:hover > a {
-  color: #6c63ff;
+  color: #b4a184;
 }
 .navbar-nav .nav-item:hover .sub-menu {
   top: 100%;
